[gd_scene load_steps=3 format=3 uid="uid://cyahhisrans70"]

[ext_resource type="Script" uid="uid://4yawk2ugf761" path="res://scripts/skill/skill_slot.gd" id="1"]
[ext_resource type="Resource" uid="uid://bv4xlvjm2qiwh" path="res://skills/Elementalist/thunder_step.tres" id="2_6b0p6"]

[node name="SkillSlot" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 48.0
offset_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")
skill = ExtResource("2_6b0p6")

[node name="SlotButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="CooldownCover" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.55)

[node name="CooldownText" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 12.0
offset_bottom = 23.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hotkey" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 30.0
offset_right = 24.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(1, 1, 1, 0.8)
text = "1"

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="SlotButton" to="." method="_on_SlotButton_pressed"]
[connection signal="pressed" from="SlotButton" to="." method="_on_slot_button_pressed"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
